--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
   "risc0/zkvm/prove",
   "risc0/zkvm/verify",
   "risc0/zkvm/sdk/rust/core",
+  # "risc0/zkvm/sdk/rust/host",
   "risc0/zkvm/sdk/rust/serde",
   "third_party/tbb",
 ]
